<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/loginbelow_img"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/allservice_image"/>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/otp_view"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/tex1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/ENTER_OTP"
            android:textColor="@color/testcolor"
            android:textSize="@dimen/text_16" />
        <!--/>d28376 e59588-->

        <TextView
            android:id="@+id/tex2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/SENT_OTP"
            android:textColor="@color/gray500"
            android:textSize="@dimen/text_14" />

    </LinearLayout>

    <TextView
        android:id="@+id/waitInterval"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:elevation="1dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="5.29"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/otp_view"
        android:textStyle="bold"/>


    <views.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:inputType="number"
        android:textColor="@color/testcolor"
        app:text_background_color="#00000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/otp_view"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">


        <views.FloatingSquareBtn
            android:id="@+id/verifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/primarysolid_bg"
            android:elevation="1dp"
            android:gravity="center"
            android:text="@string/VERIFY"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/OTP_NOT_RECEIVED"
            android:layout_marginTop="20dp"
            android:textColor="@color/testcolor"
            android:textSize="@dimen/text_12"/>
        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:elevation="1dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/RESEND"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_14"/>

<!--
        <TextView
            android:id="@+id/backtoLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:elevation="1dp"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/BACK_LOGIN"
            android:textColor="@color/testcolor"
            android:textSize="@dimen/text_14"/>
-->


    </LinearLayout>


</android.support.constraint.ConstraintLayout>