<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/loginbelow_img"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/allservice_image"/>
    <Space
        android:id="@+id/leftSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ll1"
        app:layout_constraintHorizontal_weight="10" />
    <Space
        android:id="@+id/rightSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ll1"
        app:layout_constraintHorizontal_weight="10" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/leftSpace"
        app:layout_constraintRight_toLeftOf="@+id/rightSpace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="80"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/signupTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIGNUP"
            android:textColor="@color/testcolor"
            app:layout_constraintLeft_toRightOf="@+id/leftSpace"
            app:layout_constraintRight_toLeftOf="@+id/rightSpace"
            android:textSize="@dimen/text_22" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gray_border"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/phone"
                android:contentDescription="@string/login_image"/>
            <EditText
                android:id="@+id/mobile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/PHONE_NO"
                android:maxLength="10"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textColor="@color/testcolor"
                android:textColorHint="@color/gray400"
                android:textSize="@dimen/text_14" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gray_border"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/email_gray"
                android:contentDescription="@string/login_image"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/EMAIL"
                android:imeOptions="actionNext"
                android:maxLength="30"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textColor="@color/testcolor"
                android:textColorHint="@color/gray400"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gray_border"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/pass"
                android:contentDescription="@string/login_image"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="Minimum 6 digit"
                android:imeOptions="actionNext"
                android:maxLength="15"
                android:password="true"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textColor="@color/testcolor"
                android:textColorHint="@color/gray400"
                android:textSize="@dimen/text_14" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gray_border"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/pass"
                android:contentDescription="@string/login_image"/>
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/CONFIRM_PASSWORD"
                android:imeOptions="actionDone"
                android:maxLength="15"
                android:password="true"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textColor="@color/testcolor"
                android:textColorHint="@color/gray400"
                android:textSize="@dimen/text_14" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/providerChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/leftSpace"
            app:layout_constraintTop_toBottomOf="@+id/ll1"
            android:text="I'm a service provider"
            android:backgroundTint="@color/testcolor"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/backtoLogin"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:elevation="1dp"
                android:gravity="center_vertical"
                android:text="@string/BACK_LOGIN"
                android:textColor="@color/four"
                android:paddingLeft="2dp"
                android:textSize="@dimen/text_16"
                android:layout_marginEnd="20dp"/>

            <views.FloatingSquareBtn
                android:id="@+id/signUpBtn"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/primarysolid_bg"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/NEXT"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:layout_marginStart="20dp"/>
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>